# theseus

./: .gitignore  .pre-commit-config.yaml  Data Visualizer.ipynb  Dockerfile  HOF.md  README.md  Testing Notebook.ipynb  Untitled.ipynb  detec.py  detect.py  eval.py  eval_coco.py  pyproject.toml  requirements.txt  setup.py  train.py  transforms test.ipynb
.dvc/: config
.github/: .workflows
.github/workflows/: clf.yml  docker.yml  segm.yml  tablr.yml  workflows  workflows.yml
augmentations/: __init__.py  custom.py  transforms.py  tta.py
configs/: __init__.py  config.py  config.yaml  configs.py  configs.yaml
configs/base/: globals.yaml
configs/classification/: eval.py  infer.py  pipeline.yaml  test.yaml  train.py  transform.yaml
configs/classification/optuna/: pipeline.yaml
configs/detection/: eval.py  pipeline.yaml  train.py  transform.yaml
configs/sample/: pipeline.yaml
configs/segmentation/: eval.py  infer.py  pipeline.yaml  test.yaml  train.py  transform.yaml
configs/semantic/: eval.py  infer.py  pipeline.yaml  test.yaml  train.py  transform.yaml
configs/tabular/: catboost.yaml  lightgbm.yaml  transform.yaml  xgboost.yaml
configs/tabular/base/: data.yaml  globals.yaml
configs/tabular/optuna/: catboost_tune.yaml  lightgbm_tune.yaml  optuna.yaml  test_tuner.py  tune.py  xgboost_tune.yaml
dataloader/: __init__.py  text_collator.py
dataloaders/: text_collator.py
datasets/: __init__.py  classnames.txt  coco_dataset.py  csv_classification.py  detection.py  image_classification.py  textloader.py  textset.py  vocab.py
loggers/: loggers.py
losses/: __init__.py  focalloss.py  smoothceloss.py
losses/detection/: multiboxloss.py
metrics/: __init__.py  mAP.py  metrics.py  metrictemplate.py  nlpmetrics.py
metrics/classification/: __init__.py  accuracy.py  balanced_accuracy.py  confusion_matrix.py  f1score.py  similarity.py
metrics/detection/: map.py
metrics/pycocoevalcap/: eval.py
metrics/pycocoevalcap/bleu/: bleu.py
metrics/pycocoevalcap/tokenizer/: ptbtokenizer.py
metrics/segmentation/: dicecoeff.py
models/: __init__.py  backbone.py  base_model.py  classifier.py  detector.py  models.py  tpu_model.py  translator.py
models/effdet/: __init__.py  anchors.py  efficientdet.py  evaluator.py
models/effdetv2/: __init__.py  config.py  loss.py  model.py
models/frcnn/: __init__.py  model.py  roi_heads.py  rpn.py
models/retinanet/: __init__.py  detector.py  encoder.py  fpn.py  loss.py  model.py  retina_collator.py  utils.py
models/seq2seq/: __init__.py  search.py
models/ssd/: __init__.py  detector.py  model.py  utils.py
models/transformer/: __init__.py  attention.py  embedding.py  layers.py  norm.py  projection.py  search.py  utils.py
models/yolo/: loss.py
models/yolov4/: __init__.py  common.py  experimental.py  yolo.py
samples/: .gitignore  carvana-masking.dvc  dog-vs-cats.dvc  titanic.dvc
samples/carvana-masking/: classnames.txt  train.csv  val.csv
samples/titanic/: classnames.txt  train.csv  val.csv
tests/classification/: conftest.py  inference.py  test_clf.py  test_train_val.py  test_tuner_clf.py
tests/semantic/: conftest.py  inference.py  test_segm.py  test_train_val.py
tests/tabular/: conftest.py  test_tablr.py  test_tuner.py  test_tuner_tblr.py
theseus/: __init__.py  opt.py  registry.py
theseus/base/: __init__.py  pipeline.py
theseus/classification/: __init__.py  pipeline.py
theseus/cv/: __init__.py  requirements.txt
theseus/lightning/: pipeline.py
theseus/ml/: pipeline.py
theseus/nlp/: requirements.txt
theseus/segmentation/: pipeline.py
theseus/semantic/: __init__.py  pipeline.py
theseus/tabular/: __init__.py  pipeline.py  requirements.txt
theseus/utilities/: __init__.py  cuda.py  download.py  folder.py  getter.py  hooks.py  loading.py
torckay/: opt.py
torckay/classification/: pipeline.py
torckay/loggers/: log.txt  tf_logger.py
torckay/utilities/: cuda.py  getter.py  loading.py  print.py  stuff.py
torckay/utils/: cuda.py  getter.py  print.py
trainer/: __init__.py  checkpoint.py  trainer.py
utils/: __init__.py  cuda.py  getter.py  gradcam.py  postprocess.py  preprocess.py  random_seed.py  search.py  split_csv.py  text_tokenizer.py  utils.py
utils/tools/: split_kfold.py
(+459 files in other folders)
